[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ships_project"
version = "0.1.0"
description = "Utilities and pipeline for historical ships/voyages datasets."
authors = [
  { name="Sina Tavakkoli" }
]
dependencies = [
  "pandas>=1.3",
  "networkx>=2.6",
  "matplotlib>=3.4",
  "pyyaml"
]